--- a/playbooks/roles/snapshot/tasks/housekeeping.yaml
+++ b/playbooks/roles/snapshot/tasks/housekeeping.yaml
@@ -1,14 +1,15 @@
 ---
-- name: Remove outdated snapshots
+# group by description and keep the latest id
+- name: Remove superseeded snapshots
   when: inventory_hostname == ansible_play_hosts_all[-1]
   changed_when: _found.rc == 0
-  failed_when: false
+  failed_when: _found.stderr
   ansible.builtin.shell:
     cmd: |-
       hcloud --quiet --poll-interval 10s image list --type snapshot --output noheader --output columns=id,description |
         sort -r |
         awk 'x[$2]++ { print $1 }' |
         xargs -r hcloud --quiet --poll-interval 10s image delete |
-        grep .
+        grep -q .
     executable: /bin/bash
   register: _found
