--- a/playbooks/roles/setup_common/tasks/ipv6-hetzner.yaml
+++ b/playbooks/roles/setup_common/tasks/ipv6-hetzner.yaml
@@ -68,10 +68,10 @@
       exit $rc
   register: _ip6_up
 
-- name: Gather IPv6 facts
+- name: Gather facts - IPv6
   ansible.builtin.setup:
     gather_subset:
-      - "default_ipv6"
+      - default_ipv6
 
 - name: Ensure IPv6 address is non-default
   failed_when: ansible_facts.default_ipv6.address is search('::1$')
