--- a/playbooks/roles/setup_common/tasks/nginx.yaml
+++ b/playbooks/roles/setup_common/tasks/nginx.yaml
@@ -66,9 +66,9 @@
       notify: Reload nginx
 
 - name: Create hidden directory
-  when: nginx_hidden_directory
+  when: nginx_site_directory
   ansible.builtin.file:
-    path: /var/www/html/{{ nginx_hidden_directory }}
+    path: /var/www/{{ nginx_site_directory }}
     state: directory
     mode: "0755"
 
