use SSH args in rsync

--- a/playbooks/roles/info_common/tasks/kernel-config.yaml
+++ b/playbooks/roles/info_common/tasks/kernel-config.yaml
@@ -12,3 +12,5 @@
     mode: pull
     src: "{{ _config_fname.stdout }}"
     dest: "{{ tmp_dir }}/kconfig/{{ inventory_hostname }}.config"
+    use_ssh_args: true
+    verify_host: true
