--- a/playbooks/roles/setup_common/tasks/nginx.yaml
+++ b/playbooks/roles/setup_common/tasks/nginx.yaml
@@ -65,7 +65,7 @@
         dest: "/etc/nginx/conf.d/{{ inventory_hostname }}.crt"
       notify: Reload nginx
 
-- name: Create hidden directory
+- name: Create site directory
   when: nginx_site_directory
   ansible.builtin.file:
     path: /var/www/{{ nginx_site_directory }}
