--- a/playbooks/roles/info_tor/tasks/main.yaml
+++ b/playbooks/roles/info_tor/tasks/main.yaml
@@ -68,10 +68,15 @@
       tags:
         - onionoo
 
-    - name: Uptime
-      ansible.builtin.import_tasks: uptime.yaml
+    - name: Process runtime
+      ansible.builtin.import_tasks: process-runtime.yaml
       tags:
-        - uptime
+        - process-runtime
+
+    - name: Systemd time
+      ansible.builtin.import_tasks: systemd-time.yaml
+      tags:
+        - systemd-time
 
     - name: Version of Tor
       ansible.builtin.import_tasks: version.yaml
